syntax = "proto3";

package api.link_shortener.v1;

option go_package = "github.com/olezhek28/link-shortener/pkg;linkShortenerV1";

import "google/api/annotations.proto";
import "validate/validate.proto";

service LinkShortenerV1{
  rpc AddLink(AddLinkRequest) returns (AddLinkResponse) {
    option (google.api.http) = {
      post: "/link-shortener/v1/add-link"
      body: "*"
    };
  }
  rpc GetLongLink(GetLongLinkRequest) returns (GetLongLinkResponse) {
    option (google.api.http) = {
      post: "/link-shortener/v1/long-link/get"
      body: "*"
    };
  }
}

message AddLinkRequest {
  string long_link = 1 [json_name = "long_link", (validate.rules).string.min_len = 1];
}

message AddLinkResponse {
  message Result {
    string short_link = 1 [json_name = "short_link"];
  }

  Result result = 1;
}

message GetLongLinkRequest {
  string short_link = 1 [json_name = "short_link", (validate.rules).string.min_len = 1];
}

message GetLongLinkResponse {
  message Result {
    string long_link = 1 [json_name = "long_link"];
  }

  Result result = 1;
}
